--- a/Galleriet/Galleriet/Galleriet.csproj
+++ b/Galleriet/Galleriet/Galleriet.csproj
@@ -57,6 +57,14 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\Chrysanthemum.jpg" />
+    <Content Include="Content\Images\Desert.jpg" />
+    <Content Include="Content\Images\Hydrangeas.jpg" />
+    <Content Include="Content\Images\Jellyfish.jpg" />
+    <Content Include="Content\Images\Koala.jpg" />
+    <Content Include="Content\Images\Lighthouse.jpg" />
+    <Content Include="Content\Images\Penguins.jpg" />
+    <Content Include="Content\Images\Tulips.jpg" />
     <Content Include="Default.aspx" />
     <Content Include="ErrorPage.html" />
     <Content Include="Content\style.css" />
@@ -64,7 +72,9 @@
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\jquery-2.1.0.min.map" />
   </ItemGroup>
   <ItemGroup>
@@ -86,9 +96,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\Images\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
